# Hydra

./: .cursorignore  .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  HYDRA_INTERNAL_DSP_REFERENCE.md  README.md  installer_win.iss  memories.md
.github/workflows/: build.yml
Presets/: 00 - Init.hydra  01 - Classic Major.hydra  02 - Cloudy Bells.hydra  03 - Bong Bass.hydra  04 - Grumble.hydra  05 - Quick Duck.hydra  06 - Sandblasted Square.hydra  07 - Rubber Band Bass.hydra  08 - Fall Out Boy.hydra  09 - Bright Major.hydra  10 - The Tonibone.hydra  11 - Top Layer Noise.hydra  12 - Pleasant Day.hydra  13 - Wired Rezzy.hydra  14 - Broken AF.hydra  15 - Agressive Bass.hydra  16 - Car Bass.hydra  17 - Cute Pluck.hydra  18 - Lead Asia.hydra  19 - Lead Bass Vibes.hydra  20 - Warm Hit.hydra  21 - Prodigal Lite.hydra  22 - Sad Jazz.hydra  23 - Leads Screaming.hydra  24 - Harm Plucks.hydra  25 - Power Resonance.hydra
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: HydraEngine.cpp  HydraEngine.h  HydraHarmonySnap.h  HydraMacroMapper.cpp  HydraMacroMapper.h  HydraOscillator.cpp  HydraOscillator.h  HydraParallelSaturator.cpp  HydraParallelSaturator.h  HydraPhaseDisperser.cpp  HydraPhaseDisperser.h  ZdfLadderFilter.cpp  ZdfLadderFilter.h
Source/UI/: BoutiqueLookAndFeel.cpp  BoutiqueLookAndFeel.h  ChromeTextButton.cpp  ChromeTextButton.h  HydraPanelBackground.cpp  HydraPanelBackground.h  ProceduralDarkLookAndFeel.cpp  ProceduralDarkLookAndFeel.h  SnapToggleButton.cpp  SnapToggleButton.h  XyExplorer.cpp  XyExplorer.h
Tests/: HydraEngineTests.cpp  PluginTests.cpp
scripts/macos/: postinstall
